navbar styling and fixing startsgraph alignment

--- a/source/CSS/Homestyle.css
+++ b/source/CSS/Homestyle.css
@@ -92,4 +92,5 @@ body {
     width: 100%;
     padding: 0 20px;
     flex-wrap: wrap;
+    margin-bottom: 5rem;
 }
